client/Components/Sidebar/Sidebar.scss
.navbar {
    height: 80px;
    display: flex;
    justify-content: start;
    align-items: center;
    background: none;
}

.menu-bars {
    margin-left: 2rem;
    font-size: 2rem;
    background: none;
}

.nav-menu {
    background-color: rgba(20, 20, 30, 0.8);
    width: 18rem;
    height: 93vh;
    display: flex;
    justify-content: center;
    position: fixed;
    bottom: 0px;
    left: -100%;
    transition: 850ms;
    z-index: 2;
}

.nav-menu.active {
    left: 0;
    transition: 350ms;
}

.nav-text {
    display: flex;
    justify-content: start;
    align-items: center;
    padding: 8px 0px 8px 16px;
    list-style: none;
    height: 60px;
}

nav-text a {
    text-decoration: none;
    color: red;
    font-size: 18px;
    width: 95%;
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0 16px;
    border-radius: 4px;
}

.nav-text a:hover {
    background-color: orange;
}

.nav.menu-items {
    width: 100%;
}

.navbar-toggle {
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: start;
    align-items: center;
}

span {
    margin-left: 16px;
}

::-webkit-scrollbar-thumb {
}

